Fixed: dark mode & pdf & get month subs Fix dark mode with white background Fix pdf cannot open by acrobat etc. because expected a dict object. Fix get month subs return wrong sub id

--- a/src/global.css
+++ b/src/global.css
@@ -23,4 +23,12 @@ html body {
     p {
         color: white;
     }
+
+    html body {
+        background-color: rgb(20, 20, 20);
+    }
+
+    .home-layout {
+        background-color: rgb(20, 20, 20);
+    }
 }
